Fixed fullscreen layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ canvas {
   min-height: 100vh;
   background-image: url("/img/bg/linedpaper.png");
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
